Improving and optimizing code